# freelancequest

./: .gitignore  LICENSE  docker-compose.yml
backend/: .coverage  Dockerfile  classes_MyModels.dot  devwatch.py  manage.py  my_models.dot  packages_MyModels.dot  pyproject.toml  pyrightconfig.json  pytest.ini
backend/chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/chat/tests/: test_chat.py
backend/core/: views.py
backend/core/management/commands/: seed_gigs.py  seed_missions_and_badges.py  seed_platform_benefits.py  seed_skills.py  seed_users.py
backend/freelancequest/: asgi.py  settings.py  urls.py  wsgi.py
backend/gamification/: admin.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/gamification/migrations/: 0001_initial.py  0002_alter_badge_icon.py  0003_alter_gamificationprofile_user.py  0004_platformbenefit_gamificationprofile_points_and_more.py  0005_userbenefit.py  0006_tournament.py  0007_badge_code_mission_code.py  0008_usermissionprogress_seen.py  0009_delete_tournament.py  0010_mission_goal_count_mission_track_model.py  0011_usermissionprogress_current_count.py  0012_usermissionprogress_updated_at.py
backend/gamification/tests/: test_gamification.py
backend/gigs/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/gigs/migrations/: 0001_initial.py  0002_gig_price.py  0003_alter_gig_status.py  0004_application.py  0005_gigsubmission.py  0006_gig_skills.py  0007_alter_gig_status.py  0008_alter_gig_status.py  0009_gig_due_date.py  0010_gigsubmission_user_alter_gigsubmission_file_and_more.py
backend/gigs/tests/: test_gigs.py
backend/users/: adapters.py  admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_role.py  0003_remove_freelancerprofile_xp_remove_user_phone_number.py  0004_user_username.py  0005_skill.py  0006_remove_freelancerprofile_skills_and_more.py
backend/users/tests/: test_auth.py  test_users.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.jsx  App.tsx  main.tsx
(+47 files in other folders)
